--- a/auth/auth-api/pom.xml
+++ b/auth/auth-api/pom.xml
@@ -30,7 +30,7 @@
 
         <dependency>
             <groupId>com.muci.framework</groupId>
-            <artifactId>oweikj-manage-multi-venue-common</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
